--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,62 @@
 @import "tailwindcss";
 
-
 html {
   scroll-behavior: smooth;
 }
-
 
 .blinking-cursor {
   font-weight: bold;
   animation: blink 1s step-start infinite;
 }
 
+/* aboutus for Profile image */
 @keyframes blink {
   50% {
     opacity: 0;
   }
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.animate-float {
+  animation: float 4s ease-in-out infinite;
+}
+
+@keyframes spin-slow {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 10s linear infinite;
+}
+
+/* navbar */
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeInDown {
+  animation: fadeInDown 0.5s ease-out;
 }
